feat: framework to start working with sales
