# src/routes/sale.router.ts
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import SaleController from 'src/app/controller/SaleController';
+
+const router = Router();
+
+// router.post('/sale', SaleController.create);
+// router.get('/sale', SaleController.find);
+// router.get('/sale/:id', SaleController.findById);
+// router.put('/sale/:id', SaleController.update);
+// router.delete('/sale/:id', SaleController.delete);
+
+export default router;
